Made shop areas clickable fixed some spacing on icons page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1783,8 +1783,12 @@ nav li img {
 }
 
 #clean-design img:hover {
-  
+  transition: .6s ease-in;
   transform: perspective(400px) rotateY(5deg);
+}
+
+#clean-design img:not(:hover) {
+  transition: .6s ease-out;
 }
 
 /* Lifetime Updates */
@@ -1848,13 +1852,21 @@ nav li img {
 }
 
 #hq-backgrounds h2, #hq-backgrounds p {
-  padding: 4rem;
+  padding: 0rem 1em;
   max-width: 800px;
+}
+
+#hq-backgrounds h2 {
+  margin: 1em 0;
+
 }
 
 #hq-backgrounds {
   height: 100vh;
   width: 100vw;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 /* UNLIMITED Customisation */
